inout procedure